// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroupPassFail render 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object]"
      selectedkey="unknown"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to FAIL 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object]"
      selectedkey="fail"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        arialabel="undo"
        iconprops="[object Object]"
      />
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to PASS 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object]"
      selectedkey="pass"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        arialabel="undo"
        iconprops="[object Object]"
      />
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;
